--- a/style.css
+++ b/style.css
@@ -70,3 +70,63 @@ body {
   color: #f39c12;
   margin: 0 2px;
 }
+
+/* CSS FOR main_footer */
+
+#main_footer {
+  background-color: #28a745;
+  width: 100vw;
+  height: 35vh;
+  display: flex;
+  flex-direction:column;
+}
+
+#footer {
+  display: flex;
+  flex-direction: column;
+  background-color: blueviolet;
+  width: 100%;
+  height: 20%;
+  align-items: center;
+}
+
+.social_media_links {
+  background-color: #666;
+  width: 95%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 10px;
+  align-items: center;
+  /* margin: auto; */
+}
+.social_media_links > p {
+  /* background-color:aquamarine; */
+  font-size: 20px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.socialMedia_images {
+  background-color: aqua;
+}
+.socialMedia_images > img {
+  width: 50px;
+  height: 50px;
+}
+
+/* CSS FOR user_div */
+
+#user_para {
+  background-color: #f39c12;
+  /* width: 25%; */
+  margin-bottom: 10px;
+  display: flex;
+  flex-direction: row;
+}
+
+#test_something{
+  width: 25%;
+  background-color: crimson;
+  display: flex;
+  flex-direction: column;
+}
