--- a/style.css
+++ b/style.css
@@ -162,3 +162,59 @@ body {
 .links:hover {
   border-radius: 20px;
 }
+
+/* CSS FOR FOOTER ***** */
+
+#footer {
+  background-color: rgba(128, 128, 128, 0.445);
+  width: 100vw;
+  height: 20vh;
+}
+
+#social_links {
+  /* background-color: whitesmoke; */
+  width: 100%;
+  height: 60%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 40px;
+}
+
+#social_links > a {
+  background-color: white;
+  width: 60px;
+  height: 60px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  border-radius: 30px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
+    rgba(0, 0, 0, 0.22) 0px 10px 10px;
+}
+.socialMedia_img {
+  width: 48px;
+  height: 48px;
+  border-radius: 30px;
+}
+.socialMedia_img:hover {
+  width: 62px;
+  height: 62px;
+}
+
+/* CSS FOR FOOTER TEXT **** */
+
+#footer_text {
+  display: flex;
+  flex-direction: row;
+  background-color: rgba(128, 128, 128, 0.413);
+  width: 100%;
+  height: 40%;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  font-family: "Courier New", Courier, monospace;
+  font-weight: 500;
+}
