--- a/style.css
+++ b/style.css
@@ -198,6 +198,7 @@ body {
   width: 48px;
   height: 48px;
   border-radius: 30px;
+  transition: 2s  ease-in-out;
 }
 .socialMedia_img:hover {
   width: 62px;
